# nonebot-plugin-gshisbanner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  update_alias.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pypi-publish.yml  update_alias.yml
data/: alias.json
data/genshin_history/: alias.json
nonebot-plugin-gshisbanner/: __init__.py  __main__.py  alias.py  deal.py  deal_json.py
nonebot_plugin_gshisbanner/: __init__.py  __main__.py  alias.py  api.py  config.py  constant.py  deal.py  deal_json.py  draw.py  main.py  model.py  send.py  start.py
nonebot_plugin_gshisbanner/adapters/: __init__.py  ob11.py  red.py
