[tool.poetry]
name = "nonebot-plugin-gshisbanner"
version = "1.2.0"
description = "Nonebot2查询原神历史卡池小插件"
authors = ["forchannot <yy320206@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_gshisbanner"}]


[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.1.0"
httpx = ">=0.20.0, <1.0.0"
nonebot-plugin-send-anything-anywhere = "^0.3.1"
pydantic = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["E", "F", "B"]
ignore = ["E501", "E402"]
line-length = 88
unfixable = ["B"]


[tool.isort]
profile = "black"

